--- a/todolist/pubspec.yaml
+++ b/todolist/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cloud_firestore: ^4.17.0
   firebase_core: ^2.30.0
   flutter_spinkit: ^5.2.1
+  table_calendar: ^3.1.1
+
 
 dev_dependencies:
   flutter_test:
